fix: added overflow hidden on all .viewContainers to handle elements causing scrollbars on animateIn()

--- a/src/styles/views/_main.scss
+++ b/src/styles/views/_main.scss
@@ -78,7 +78,8 @@ svg {
     padding-top: global.$header-height;
     box-sizing: border-box;
     text-align: center;
-    
+    overflow: hidden;
+
     .innerWrapper {
         position: relative;
         width: 100%;
